[#110] - Changed occurences of "Go Social" to "Follow" from as indicated in #106

--- a/hs_core/templates/pages/help.html
+++ b/hs_core/templates/pages/help.html
@@ -125,7 +125,7 @@
                                     <ol>
                                         <li><a href="sign in page">Sign in</a> to HydroShare.</li>
                                         <li>Click on "My Resources" in the navigation bar at the top of the page.</li>
-                                        <li>Use the search bar to find the resource that you'd like to modify.</li>
+                                        <li>Use the search bar to find the resource that you would like to modify.</li>
                                         <li>Select "Editable by me" to filter the search results to only show resources that you have permission to edit.</li>
                                     </ol>
                                     <p>From here, you can do any of the following:</p>
@@ -152,7 +152,7 @@
                                     <ol>
                                         <li><a href="sign in page">Sign in</a> to HydroShare.</li>
                                         <li>Click on "My Resources" in the navigation bar at the top of the page.</li>
-                                        <li>Use the search bar to find the resource that you'd like to rate or comment on.</li>
+                                        <li>Use the search bar to find the resource that you would like to rate or comment on.</li>
 
 
                                         <li><strong>Comment on a resource</strong> by scrolling to the bottom of the page, entering your name and email address, typing your comment, and clicking the black "Comment" button.</li>
