Iss: nc meta view mode Draft

--- a/hs_app_netCDF/templates/pages/netcdfresource.html
+++ b/hs_app_netCDF/templates/pages/netcdfresource.html
@@ -11,7 +11,7 @@
 
                 {# Add the view mode html code below #}
                 <div>
-                    {% if variable %}
+                    {% if variables %}
                         {% for variable in variables %}
                             <h4><strong>Variable:</strong></h4>
                             <hr style="border-color: dodgerblue; margin-top: 0px;margin-bottom: 2px">
