--- a/theme/static/css/hydroshare_core.css
+++ b/theme/static/css/hydroshare_core.css
@@ -409,7 +409,9 @@ img.img-about {
 
 .thumbnail {
 	position: relative;
+    font-size: 14px;
 }
+
 .thumbnail .visit {
 	position: absolute;
 	opacity: 0;
@@ -846,7 +848,9 @@ table.table-plain {
 }
 .tab-elements > .tabs-body{
     border: 1px solid #ddd;
-    border-top:0;
+    min-height: 300px;
+    padding: 10px;
+    overflow: auto;
 }
 
 .label-file-name{
@@ -973,6 +977,41 @@ a.tag:hover {
     /*-moz-box-shadow: inset 0 1px 0 #3d97b3;*/
     /*box-shadow: inset 0 1px 0 #3d97b3;*/
 }
+
+.user-thumbnail{
+    border: 1px solid #ddd;
+    height: 150px;
+    margin-top: 5px;
+    margin-left: 5px;
+    border-radius: 3px;
+    display: inline-block;
+    float: left;
+    padding: 10px;
+    font-size:12px;
+}
+
+.user-thumbnail strong{
+    margin-right:10px;
+}
+
+.user-thumbnail > .caption{
+    float:left;
+}
+
+img.profile-picture {
+    float: left;
+    height: 130px;
+    width: 150px;
+    border: 0;
+    margin-right:10px;
+}
+
+span.name-label{
+    font-size: 18px;
+    font-weight: bold;
+    display: table;
+}
+
 
 /* ===== Responsive CSS ===== */
 
