--- a/hs_core/templates/pages/genericresource.html
+++ b/hs_core/templates/pages/genericresource.html
@@ -24,7 +24,7 @@
     <div class="col-md-12">{# <img src="/placeholder.png"></div> #}
 
         <table class="table">
-            <tr><th>Resource Type</th><td>{{ resource_type }}</td></tr>
+            <tr><th>Resource Type</th><td>{{ cm|resource_type }}</td></tr>
             <tr><th>Owner</th><td>{{ cm.user|contact|safe }}</td></tr>
             <tr><th>Added on</th><td>{{ cm.created|date }}</td></tr>
             <tr><th>Last updated by</th><td>{% if cm.last_changed_by %}{{ cm.last_changed_by|contact|safe }}{% endif %}</td></tr>
@@ -72,12 +72,15 @@
                         </form>
                    {% endif %}
                    <div>
-                       {% if metadata_status == "Incomplete" %}
+                       {% if metadata_status == "Insufficient to make public" %}
                             <table class="table table-condensed" style="margin-top: 2px; border: 2px solid red">
                                 <tr style="color: red"><td><h4>Data for the following required elements are missing:</h4></td></tr>
                                 {% for element in missing_metadata_elements %}
                                     <tr><td>{{ element }}</td></tr>
                                 {%  endfor %}
+                                {% if title|stringformat:"s" == "Untitled resource" %}
+                                    <tr><td>Title needs to be changed</td></tr>
+                                {% endif %}
                             </table>
                        {% endif %}
                    </div>
@@ -415,9 +418,11 @@
                               </ul>
                             </div>
                         </td>
-{#                        {% if page.perms.change and resource_type != "Geographic Raster Resource" %}#}
+
                         {% if page.perms.change %}
-                        <td><button class="btn btn-success btn-block"  data-toggle="modal" data-target="#add-file-dialog" multiple="multiple">Add file</button></td>
+                            {% if resource_type != "Geographic Raster Resource" or not cm.files.all %}
+                                <td><button class="btn btn-success btn-block"  data-toggle="modal" data-target="#add-file-dialog" multiple="multiple">Add file</button></td>
+                            {% endif %}
                         {% endif %}
                     </tr>
                 </tfoot>
