--- a/hs_rhessys_inst_resource/templates/pages/instresource.html
+++ b/hs_rhessys_inst_resource/templates/pages/instresource.html
@@ -8,6 +8,7 @@
         {% csrf_token %}
         {{ form|crispy }}
 
-        <input type="submit" class="btn btn-primary" style="margin-top: 0.5em;" value="Run model"/>
+        <input type="submit" class="btn btn-primary" style="margin-top: 0.5em;" value="Save model"/>
+	<a class="btn btn-primary" id="back" href="http://{{ request.get_host }}/hs_rhessys_inst_resource/{{ cm.short_id }}/runmodel/">Run model</a>
     </form>
 {% endblock %}
